--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,21 @@
-<div class="container p-2">
-  <div class="row flex flex-column">
-    <%= render "shared/user_header", user: @user%>
-    <div class="bio border p-3 w-50">
-      <h4>Bio</h4>
-      <p> <%= @user.bio%> </p>
+<div class="">
+  <div class="row">
+    <div class="col-12">
+      <%= render "shared/user_header", user: @user%>
     </div>
-    <div class="w-50 border p-3 mt-1">
-      <% @user.posts.each do |post| %>
-        <%= render "shared/post_comment", post: post %>
-      <% end %>
+    <div class="col-12">
+      <div class="bio rounded border border-dark p-2">
+        <h4>Bio</h4>
+        <p> <%= @user.bio%> </p>
+      </div>
     </div>
-    <%= link_to "See All Post", user_posts_path(@user), class:"btn btn-secondary w-50 mt-2" %>
+    <div class="col-12">
+      <div class="border p-3 mt-1">
+        <% @user.recent_three_posts.each do |post| %>
+          <%= render "shared/post_comment", post: post %>
+        <% end %>
+      </div>
+    </div>
+    <%= link_to "See All Post", user_posts_path(@user), class:"btn btn-secondary w-50 mt-2 mx-auto" %>
   </div>
 </div>
