--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="mx-auto w-75">
   <%= render "shared/user_header", user: @user%>
   <% @posts.each do |post| %>
-    <div class="w-50 border border-2 p-2">
+    <div class="w-75 border border-dark rounded border-2 p-2">
       <h4> <%= link_to post.title, user_post_path(post, user_id: @user.id) %> </h4>
       <p> <%= post.text %> </p>
       <div class="d-flex justify-content-end">
@@ -9,7 +9,7 @@
         <span class="ml-2" > Comments: <%= post.likes.count%> </span>
       </div>
       <div class="border mt-1 p-2">
-        <% post.comments.each do |comment| %>
+        <% post.recent_five_comments.each do |comment| %>
           <p>
             <span> <%= comment.author.name %> : </span>
             <span> <%= comment.text %> </span>
