--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container p-2">
+<div class="">
   <%@users.each do |user| %>
     <%= render "shared/user_header", user: user%>
   <% end %>
