--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,14 @@
 <div class="mx-auto w-75">
+  <div class="">
+  </div>
   <%= render "shared/user_header", user: @user%>
+  <div class="p-3">
+    <%= link_to new_user_post_path() do %>
+      <button class="btn btn-primary" >New Post</button>
+    <% end %>
+  </div>
   <% @posts.each do |post| %>
-    <div class="w-75 border border-dark rounded border-2 p-2">
+    <div class="m-1 border border-dark rounded border-2 p-2">
       <h4> <%= link_to post.title, user_post_path(post, user_id: @user.id) %> </h4>
       <p> <%= post.text %> </p>
       <div class="d-flex justify-content-end">
