--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <div class="">
+  <div class="p-3">
+    <button class="btn btn-primary p-2">
+      <%= link_to "New Post", new_user_post_path(@user), class: "text-white" %>
+    </button>
+  </div>
   <div class="row">
     <div class="col-12">
       <%= render "shared/user_header", user: @user%>
