solve n+1 problem and test using rspec

--- a/app/views/shared/_post_comment.html.erb
+++ b/app/views/shared/_post_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="">
-  <h4> <%= link_to post.title, user_post_path(post) %> </h4>
+  <h4> <%= link_to post.title, user_post_path(user,post) %> </h4>
   <p> <%= post.text %> </p>
   <div class="d-flex justify-content-end">
     <span class="">Comments: <%= post.comments.count%> </span>, 
