--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
     <div class="col-12">
       <div class="border p-3 mt-1">
         <% @user.recent_three_posts.each do |post| %>
-          <%= render "shared/post_comment", post: post %>
+          <%= render "shared/post_comment", post: post, user: @user %>
         <% end %>
       </div>
     </div>
