--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,26 @@
   </head>
   <body>
     <div class="w-75 mx-auto">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
-    </div>
-  </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</html>
+      <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+        <%=link_to "Home", root_path, class: 'd-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none'%>
+        <ul class="nav nav-pills">
+          <% unless current_user %>
+            <li class="nav-item">
+              <%=link_to "Signin", new_user_session_path, class: 'nav-link'%>
+            </li>
+            <li class="nav-item">
+              <%=link_to "Signup", new_user_registration_path, class: 'nav-link'%>
+            </li>
+          <% end %>
+          <% if current_user %>
+            <li class="nav-item"><a href="#" class="nav-link"> <%= current_user.name%> </a></li>
+            <li class="nav-item"><%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger'%></li>
+          <%end%>
+        </header>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+        <%= yield %>
+      </div>
+    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+  </html>
