Add cancancan package and add comment button for posts and comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,10 +15,14 @@
     <h5>Comments</h5>
     <div class="border mt-1 p-2">
       <% @post.comments.each do |comment| %>
-        <p>
-          <span> <%= comment.author.name %> : </span>
-          <span> <%= comment.text %> </span>
-        </p>
+        <div class="d-flex justify-content-between m-2">
+          <p>
+            <span class="fw-bold mr-2"> <%= comment.author.name %> : </span>
+            <span class="fw-italic"> <%= comment.text %> </span>
+          </p>
+          <button class="btn btn-danger btn-sm ">Delete</button>
+        </div>
+        <hr>
       <%end%>
     </div>
   </div>
