--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,11 @@
             <li class="nav-item"><%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger'%></li>
           <%end%>
         </header>
-        <p class="notice"><%= notice %></p>
+        <% if notice %>
+          <div class="alert alert-success" role="alert">
+            <%= notice %>
+          </div>
+        <%end%>
         <p class="alert"><%= alert %></p>
         <%= yield %>
       </div>
