--- a/app/views/shared/_post_comment.html.erb
+++ b/app/views/shared/_post_comment.html.erb
@@ -1,7 +1,11 @@
 <div class="">
   <div class="d-flex justify-content-between">
     <h4> <%= link_to post.title, user_post_path(user,post) %> </h4>
-    <button class="btn btn-danger btn-sm ">Delete</button>
+    <% if can? :destroy, post%>
+      <%=link_to "Delete", user_post_path(user, post),
+        data: { turbo_method: :delete, turbo_confirm: "Are You Sure?"  },
+        class: 'btn btn-danger btn-sm' %>
+    <%end%>
   </div>
   <p> <%= post.text %> </p>
   <div class="d-flex justify-content-end">
